s_aasociation.tf
resource "aws_route_table_association" "a" {
  subnet_id      = "${aws_subnet.public-sd.id}"
  route_table_id = "${aws_route_table.r.id}"
}
